--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^2.0.2",
     "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage": "^1.1.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-htmlfile-reporter": "^0.3.5",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
